--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,40 @@
-# This is a basic workflow to help you get started with Actions
+def print_christmas_tree():
+    # Tree decoration characters
+    ornaments = ['*', 'o', '@', '+']
+    from random import choice
+    
+    # Print Merry Christmas message
+    print("\n" + "🎄 MERRY CHRISTMAS! 🎄".center(50))
+    print("May your day be filled with joy and peace!".center(50))
+    print()
+    
+    # Tree top star
+    print(("⭐").center(50))
+    
+    # Tree body
+    tree_width = 23
+    for i in range(tree_width):
+        spaces = " " * (tree_width - i)
+        if i == 0:
+            print(spaces + "*")
+        else:
+            decorations = ""
+            for j in range(2 * i + 1):
+                if j % 2 == 0 and i % 2 == 0:
+                    decorations += choice(ornaments)
+                else:
+                    decorations += "/"
+            print(spaces + decorations)
+    
+    # Tree trunk
+    trunk_height = 4
+    trunk_width = 5
+    for i in range(trunk_height):
+        print((" " * (tree_width - trunk_width // 2)) + "|" * trunk_width)
+    
+    # Base decorations
+    print("=" * 50)
+    print("\n" + "🎁  🎅  🦌  ⛄  🔔  🎁".center(50))
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+if __name__ == "__main__":
+    print_christmas_tree()
